commit for my template

--- a/myWedding/style.css
+++ b/myWedding/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Newlyweds
+Theme Name: MyWedding
 Theme URI: https://glam.ink/downloads/newlyweds-free-wedding-theme/
 Author: Glam Ink
 Author URI: http://glam.ink/
